# simple-mcp-ollama-bridge

./: LICENSE  README.md  pyproject.toml
src/mcp_llm_bridge/: __init__.py  bridge.py  config.py  llm_client.py  main.py  mcp_client.py
